<package>
  <name>python_orocos_kdl</name>
  <version>0.3.0</version>
  <description>python_orocos_kdl</description>
  <maintainer email="ruben.smits@intermodalics.eu">Ruben Smits</maintainer>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/python_orocos_kdl</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ruben Smits</author>

  <build_depend>python-sip</build_depend>

  <build_depend>orocos_kdl</build_depend>
  <run_depend>orocos_kdl</run_depend>
  <test_depend>orocos_kdl</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
    <architecture_independent/>
  </export>
</package>
